fixed issue that invisible banner was causing

--- a/public/css/sass/commons/_analyze.scss
+++ b/public/css/sass/commons/_analyze.scss
@@ -154,6 +154,7 @@ body.analyze{
             }
 
             .word-count {
+                display:none !important;
                 .word-percent {
                     position: relative;
                     background-color: #f2f4f1;
